--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -1,2 +1,27 @@
 # Intel RealSense Depth Camera D435i Intallation
 System: Ubuntu 20.04 LTS
+
+First Step:
+```
+sudo apt-get update
+sudo apt-get upgrade
+sudo apt-get install git libssl-dev libusb-1.0-0-dev pkg-config libgtk-3-dev
+sudo apt-get install libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
+```
+Second Step:
+
+```
+git clone https://github.com/IntelRealSense/librealsense.git
+cd librealsense
+mkdir build
+cd build
+cmake ../ -DBUILD_EXAMPLES=true
+make
+sudo make install
+```
+
+Final Step:
+
+```
+realsense-viewer
+```
