--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -2,6 +2,7 @@
 System: Ubuntu 20.04 LTS
 
 First Step:
+
 ```
 sudo apt-get update
 sudo apt-get upgrade
@@ -10,6 +11,7 @@ sudo apt-get install libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
 ```
 Second Step:
 
+Install Intel RealSense SDK: Clone intel realsense reporprity from github and makefile:
 ```
 git clone https://github.com/IntelRealSense/librealsense.git
 cd librealsense
@@ -22,6 +24,7 @@ sudo make install
 
 Final Step:
 
+valid whether complish right
 ```
 realsense-viewer
 ```
