--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -1,4 +1,4 @@
-# Intel RealSense Depth Camera D435i Intallation
+## Intel RealSense Depth Camera D435i Intallation
 System: Ubuntu 20.04 LTS
 
 First Step:
@@ -11,7 +11,7 @@ sudo apt-get install libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
 ```
 Second Step:
 
-Install Intel RealSense SDK: Clone intel realsense reporprity from github and makefile:
+Install Intel RealSense SDK: Clone intel realsense libraries from github and makefile:
 ```
 git clone https://github.com/IntelRealSense/librealsense.git
 cd librealsense
