--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -3,6 +3,7 @@ System: Ubuntu 20.04 LTS
 
 First Step:
 
+Install dependencies
 ```
 sudo apt-get update
 sudo apt-get upgrade
@@ -20,6 +21,17 @@ cd build
 cmake ../ -DBUILD_EXAMPLES=true
 make
 sudo make install
+```
+
+Before using *cmake* command, it should install GCC complier.
+
+```
+sudo apt-get update
+sudo apt-get install build-essential
+```
+In case, valid command:
+```
+gcc --version
 ```
 
 Final Step:
