--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -23,7 +23,7 @@ make
 sudo make install
 ```
 
-Before using *cmake* command, it should install GCC complier.
+Before using **cmake** command, it should install GCC complier.
 
 ```
 sudo apt-get update
@@ -32,6 +32,11 @@ sudo apt-get install build-essential
 In case, valid command:
 ```
 gcc --version
+```
+Then, ensure **make** and **cmake** are able to run, otherwise
+```
+sudo apt-get install make
+sudo apt-get install cmake
 ```
 
 Final Step:
