--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -39,9 +39,20 @@ sudo apt-get install make
 sudo apt-get install cmake
 ```
 
-Final Step:
+Finally:
 
-valid whether complish right
+valid whether complishment or not:
 ```
 realsense-viewer
+```
+
+To Python:
+
+For import realsense camera under python environment:
+```
+pip install pyrealsense2
+```
+If you don't have **pip**, follow:
+```
+sudo apt-get install python3-pip
 ```
