--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -52,6 +52,7 @@ To Python:
 For import realsense camera under python environment:
 ```
 pip install pyrealsense2
+pip install open3d
 ```
 If you don't have **pip**, follow:
 ```
