--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -46,6 +46,7 @@ valid whether complishment or not:
 ```
 realsense-viewer
 ```
+PS: If u want to update firmware in that window, plz run this command under root permission:)
 
 To Python:
 
