--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -1,5 +1,5 @@
 ## Intel RealSense Depth Camera D435i Intallation
-Written by *Jiayu Song*
+Written by *Jiayu Song* in Ningbo, Zhejiang
 
 System: Ubuntu 20.04 LTS
 
