--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -19,6 +19,7 @@ Before using **cmake** command, it should install GCC complier.
 ```
 sudo apt-get update
 sudo apt-get install build-essential
+sudo apt-get install g++
 ```
 In case, valid command:
 ```
