--- a/equipment/d435i.md
+++ b/equipment/d435i.md
@@ -24,6 +24,7 @@ sudo apt-get install g++
 In case, valid command:
 ```
 gcc --version
+g++ --version
 ```
 Then, ensure **make** and **cmake** are able to run, otherwise
 ```
